--- a/Checklist.html
+++ b/Checklist.html
@@ -43,7 +43,7 @@ applyBodyTag="false"
     <div id="new-div">
       <img class="x" id="hide-new" src="{!URLFOR($Resource.ChecklistAssets, 'x.svg')}"></img>
       <div class="title"> New Checklist </div>
-      <p style="text-align: center; margin-top: 100px; color: #999"> You have no checklist types. </p>
+      <p style="text-align: center; margin-top: 100px; color: #999" ng-show="checklists.length == 0"> You have no checklist types. </p>
       <a class="link" data-section="two" href="#" ng-repeat="checklist in checklists | orderBy: 'Name'" ng-click="goToCreateDetailPage(checklist)">
         <p> {{checklist.Name}} </p>
         <p class="blurb"> {{checklist.Description__c}} &nbsp; </p>
@@ -127,11 +127,11 @@ applyBodyTag="false"
       </section>
       <section id="four">
         <div class="spacer"> </div>
-        <p style="text-align: center; margin-top: 100px; color: #999"> You have no completed checklists. </p>
+        <p style="text-align: center; margin-top: 100px; color: #999" ng-show= "completedchecklistresponses.length == 0"> You have no completed checklists. </p>
         <div class="link maplink" ng-repeat="checklist in completedchecklistresponses">
           <img class="checklist" src="{!URLFOR($Resource.ChecklistAssets, 'checklist.svg')}"></img>
           <p class="shorten"> {{checklist.Checklist__r.Name}} </p>
-          <p class="blurb shorten"> {{checklist.LastModifiedDate | date:'medium'}} </p>
+          <p class="blurb shorten"> {{checklist.LastModifiedDate | date:'MMM d, y h:mm a'}} </p>
         </div>
         <div class="spacer"> </div>
       </section>
@@ -143,7 +143,7 @@ applyBodyTag="false"
         <a class="link last" id="return" data-section="one" href="#"> Return </a>
       </section>
       <div id="googleMap" ng-show="showMapView"></div>
-      <div class="openmap" ng-click="revealMap()"></div>
+      <div class="openmap" ng-click="revealMap()" ng-show="completedchecklistresponses.length != 0"></div>
     </div>
   </div>
 </body>
