--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -73,7 +73,7 @@ $(function() {
                     <div class="requiredInput">
                       <div class="requiredBlock">
                       </div>
-                      <input id="Name" maxlength="255" size="20" tabindex="1" type="text" ng-model="checklist.name" name="formName" ng-required="true"/>
+                      <input id="Name" maxlength="255" size="20" tabindex="1" type="text" ng-model="checklist.Name" name="formName" ng-required="true"/>
                     </div>
                   </td>
                 </tr>
@@ -119,7 +119,7 @@ $(function() {
                   <h2 class="mainTitle" style="font-size: 14px;">Checklist Items</h2>
                 </td>
                 <td class="pbButton" id="topButtonRow">
-                  <input type="button" class="btn" value="Add Item" ng-click="addQuestion()"></input>
+                  <input type="button" class="btn" value="Add Item" ng-click="addItem()"></input>
                 </td>
               </tr>
             </tbody>
@@ -202,7 +202,7 @@ $(function() {
                   &nbsp;
                 </td>
                 <td class="pbButtonb" id="bottomButtonRow">
-                  <input type="button" class="btn" value="Add Item" ng-click="addQuestion()"></input>
+                  <input type="button" class="btn" value="Add Item" ng-click="addItem()"></input>
                 </td>
               </tr>
             </tbody>
@@ -296,7 +296,7 @@ $(function() {
                   <h2 class="mainTitle" style="font-size: 14px;">Checklist Items</h2>
                 </td>
                 <td class="pbButton" id="topButtonRow">
-                  <input type="button" class="btn" value="Add Item" ng-click="addQuestionEdit()"></input>
+                  <input type="button" class="btn" value="Add Item" ng-click="addItemEdit()"></input>
                 </td>
               </tr>
             </tbody>
@@ -380,7 +380,7 @@ $(function() {
                   &nbsp;
                 </td>
                 <td class="pbButton" id="bottomButtonRow">
-                  <input type="button" class="btn" value="Add Item" ng-click="addQuestionEdit()"></input>
+                  <input type="button" class="btn" value="Add Item" ng-click="addItemEdit()"></input>
                 </td>
               </tr>
             </tbody>
@@ -423,8 +423,9 @@ checklistApp.controller("AdminCtrl", function ($scope) {
             );
     } else {
       $scope.newPage = true;
-      $scope.checklist = {};
-      $scope.items = [{}];
+      $scope.checklist = {Description__c: ''};
+      $scope.items = [];
+      $scope.items[0] = {}
     }
  
     /** Types of questions. */
@@ -435,6 +436,7 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     }
     /** Creates a new checklist. */
     $scope.newChecklist = function() {
+      console.log($scope.checklist);
       for (var i = 0; i < $scope.items.length; i++) {
         $scope.items[i].Order__c = i;
       }
@@ -445,8 +447,8 @@ checklistApp.controller("AdminCtrl", function ($scope) {
         }
         Visualforce.remoting.Manager.invokeAction(
           '{!$RemoteAction.ChecklistAdminController.createChecklistWithQuestions}',
-          $scope.checklist.name,
-          $scope.checklist.description,
+          $scope.checklist.Name,
+          $scope.checklist.Description__c,
           $scope.items,
           function(result, event) {
           if (event.status) {
@@ -466,13 +468,13 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     }
 
     /** Adds a question to the current checklist. */
-    $scope.addQuestion = function() {
+    $scope.addItem = function() {
       $scope.items.push(new Object());
     }
 
     /** Adds a question for an edit question. */
-    $scope.addQuestionEdit = function() {
-      var item = {isActive__c : true, Order__c: $scope.questionCount() + 1, Question__c : "New Question"}
+    $scope.addItemEdit = function() {
+      var item = {isActive__c : true, Order__c: $scope.questionCount() + 1}
       $scope.items.push(item);
     }
 
@@ -579,8 +581,11 @@ checklistApp.controller("AdminCtrl", function ($scope) {
           {escape:true}
           );
     };
+    
 
-    $scope.getChecklistItems();
+    if (!$scope.newPage) {
+      $scope.getChecklistItems();
+    }
 });
 
 /** To go back on the browser. */
