--- a/Checklist.html
+++ b/Checklist.html
@@ -11,12 +11,12 @@ applyBodyTag="false"
 <head>
   <title> Checker </title>
   <meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1, maximum-scale=1, user-scalable=no"/>
-  <apex:includeScript value="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"/>
+  <apex:includeScript value="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"/>
   <apex:includeScript value="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"/>
   <apex:includeScript value="{!URLFOR($Resource.ChecklistAssets, 'forceTK/forceTK.js')}"/>
   <apex:stylesheet value="{!URLFOR($Resource.ChecklistAssets, 'fonts/proximanova.css')}"/>
   <apex:includeScript value="{!URLFOR($Resource.ChecklistAssets, 'fastclick/fastclick.js')}"/>
-  <script language="javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
+  <apex:includeScript value="https://maps.google.com/maps/api/js?sensor=false"/>
   <apex:includeScript value="{!URLFOR($Resource.ChecklistAssets, 'sections.js')}"/>
   <apex:stylesheet value="{!URLFOR($Resource.ChecklistAssets, 'style.css')}"/>
   <title> Checker </title>
