--- a/Checklist.html
+++ b/Checklist.html
@@ -37,7 +37,7 @@ applyBodyTag="false"
     </div>
     <div id="newbut" href="#" ng-show="canCreate">
       <p> <img id="new" src="{!URLFOR($Resource.ChecklistAssets, 'new.svg')}"></img> </p>
-      <p id="newtag"> New {{canCreate}}</p>
+      <p id="newtag"> New </p>
     </div>
     <div id="new-div">
       <img class="x" id="hide-new" src="{!URLFOR($Resource.ChecklistAssets, 'x.svg')}"></img>
